--- a/Dumper/Dumper.vcxproj.filters
+++ b/Dumper/Dumper.vcxproj.filters
@@ -15,6 +15,9 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
+    <Filter Include="resource">
+      <UniqueIdentifier>{b42fa9c3-26f9-488c-ac27-d54504489d13}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -44,6 +47,9 @@
     <ClCompile Include="RefGraphSolver.cpp">
       <Filter>sources</Filter>
     </ClCompile>
+    <ClCompile Include="EngineHeaderExport.cpp">
+      <Filter>sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine.h">
@@ -70,5 +76,16 @@
     <ClInclude Include="RefGraphSolver.h">
       <Filter>headers</Filter>
     </ClInclude>
+    <ClInclude Include="EngineHeaderExport.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="engine_code.rc">
+      <Filter>resource</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
