--- a/Dumper/engine_code.rc
+++ b/Dumper/engine_code.rc
@@ -19,3 +19,5 @@ COREUOBJECT_CPP TEXTFILE "engine_code\\CoreUObject_Package.cpp"
 BASICTYPES_CPP TEXTFILE "engine_code\\BasicTypes_Package.cpp"
 
 COREUOBJECT_PARAM TEXTFILE "engine_code\\CoreUObject_Params.h"
+
+GLOBAL_OFFSET TEXTFILE "engine_code\\GlobalOffset.h"
