[Fix]enum重定义, [Fix]struct非法中文字符无法通过编译,[Fix]当生成NameDump时遇到UTF-16字符生成乱码

--- a/Dumper/Dumper.vcxproj
+++ b/Dumper/Dumper.vcxproj
@@ -72,6 +72,7 @@
       <CallingConvention>FastCall</CallingConvention>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <ExceptionHandling>Async</ExceptionHandling>
+      <AdditionalOptions>/Zc:char8_t- %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -111,7 +112,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\include\fmt\format.cc" />
     <ClCompile Include="ClassSizeFixer.cpp" />
     <ClCompile Include="dumper.cpp" />
     <ClCompile Include="engine.cpp" />
